# MaskerLogger

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: flake.yml  lint.yml  publish.yml  quality.yml  run-tests.yml  run_tests.yml
examples/: secrets_in_logs_example.py
maskerlogger/: __init__.py  ahocorasick_regex_match.py  masker_formatter.py  secrets_in_logs_example.py  utils.py
maskerlogger/config/: gitleaks.toml
src/: __init__.py  masker_formatter.py  secrets_in_logs_example.py
tests/: test_gitleaks_config.py  test_masked_logger.py  test_timeout_decorator.py
