[tool.poetry]
name = "maskerlogger"
version = "0.4.0-beta.2"
description = "mask your secrets from your logs"
authors = ["Tamar Galer <tamar@ox.security>"]
readme = "README.md"
packages = [{include = "maskerlogger"}]

[tool.poetry.dependencies]
python = ">=3.8"
pyahocorasick = "^2.1.0"
python-json-logger = "^2.0.7"
tomli = ">=2.0.0,<3.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[tool.poetry.urls]
Source = "https://github.com/oxsecurity/MaskerLogger"
Tracker = "https://github.com/oxsecurity/MaskerLogger/issues"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
